--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "author": "Peter Gillich",
   "license": "Apache-2.0",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
+    "@mui/material": "^5.11.10",
     "@types/request": "^2.47.1",
     "handlebars": "^4.7.7",
-    "jsonata": "^1.8.5"
+    "jsonata": "^1.8.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@grafana/data": "latest",
@@ -26,11 +31,19 @@
     "@grafana/toolkit": "latest",
     "@grafana/ui": "latest",
     "@types/enzyme": "^3.10.11",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
     "react-test-renderer": "^17.0.2"
   },
   "engines": {
     "node": ">=14"
+  },
+  "resolve": {
+    "fallback": {
+      "react/jsx-runtime": "react/jsx-runtime.js",
+      "react/jsx-dev-runtime": "react/jsx-dev-runtime.js"
+    }
   }
 }
